Add: Virtual environment setup scripts and advanced tutorial notebook

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit==1.32.0
-qdrant-client==1.7.0
-langchain==0.1.12
-langchain-community==0.0.27
-pypdf==4.0.2
-beautifulsoup4==4.12.3
-requests==2.31.0
-python-dotenv==1.0.1
-jupyter==1.0.0
-ipykernel==6.29.4 
+streamlit
+qdrant-client
+langchain
+langchain-community
+pypdf
+beautifulsoup4
+requests
+python-dotenv
+jupyter
+ipykernel
